Fix align for active tasks progress bar and button

--- a/app/addons/replication/assets/less/replication.less
+++ b/app/addons/replication/assets/less/replication.less
@@ -183,6 +183,15 @@
       margin: 0;
       list-style: none;
       border-top: 1px solid @greyBrownLighter;
+      div.bar {
+        font-size: 16px;
+        line-height: 30px;
+      }
     }
   }
+}
+
+.task-cancel-button {
+    padding: 4px 12px;
+    margin-bottom: 3px;
 }
